fixed bg on safari mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,7 @@ body {
   font-family: $font-family-regular;
   background-image: url('../images/background-blur.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center bottom;
   background-attachment: fixed;
 }
 
